--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -28,4 +28,4 @@ jobs:
        name: hello-artifact
        path: ./artifacts
     - name: Display content of the text file
-      run: cat ./artifacts.hello.txt
+      run: cat ./artifacts/hello.txt
